# catcher-in-the-rye

./: .drone.sec  .drone.yml  .gitignore  .travis.yml  Dockerfile  README.rst  catcher-in-the-rye.cabal  docker-compose.yml  package.yaml  rancher-compose.yml  stack.yaml
app/: Main.hs
config/: models
src/: API.hs  App.hs  Files.hs  ImportType.hs  LensRules.hs  Lib.hs  Mailgun.hs  Models.hs  Notifications.hs  Payload.hs  PayloadTag.hs  Rules.hs  Slack.hs  Upload.hs  Vehicle.hs
src/Mailgun/: APIKey.hs
test/: MailgunSpec.hs  Spec.hs  TestCommon.hs
