name:                catcher-in-the-rye
version:             1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/fusionapp/catcher-in-the-rye#readme
license:             MIT
license-file:        LICENSE
author:              Fusion Dealer Systems (Pty) Ltd
maintainer:          example@example.com
copyright:           © 2016 Fusion Dealer Systems (Pty) Ltd
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Mailgun
  ghc-options:         -Wall -fwarn-missing-signatures
                       -fwarn-incomplete-patterns
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , cryptonite
                     , either
                     , lens
                     , memory
                     , servant-server
                     , text
                     , thyme
                     , transformers
                     , vector-space
                     , wai
                     , warp
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                     , DataKinds
                     , FlexibleInstances
                     , TemplateHaskell
                     , TypeOperators
                     , QuasiQuotes
                     , GeneralizedNewtypeDeriving

executable catcher-in-the-rye-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
                       -fwarn-missing-signatures -fwarn-incomplete-patterns
  build-depends:       base
                     , catcher-in-the-rye
  default-language:    Haskell2010

test-suite catcher-in-the-rye-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       MailgunSpec
  build-depends:       base
                     , catcher-in-the-rye
                     , aeson
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , http-types
                     , lens
                     , thyme
                     , vector-space
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
                       -fwarn-missing-signatures -fwarn-incomplete-patterns
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                     , QuasiQuotes

source-repository head
  type:     git
  location: https://github.com/fusionapp/catcher-in-the-rye
